# seL4-minimal-zig

./: .gitignore  .gitmodules  Makefile  README.md  build.zig
lib/libsel4/: bootinfo.zig  build.zig  common.zig  entrypoints.zig  libsel4.zig  linker.ld  root-task.ld  syscalls.zig  thread.zig  zig.mod
lib/libsel4/syscalls/: syscall.zig
seL4/: CMakeLists.txt  common.cmake  x86_64-pc99.cmake
seL4/include/: CMakeLists.txt
src/: main.c  main.zig
subtask/: main.zig
